prototype working with new backend

--- a/scripts/generate-tiers-package.ipynb
+++ b/scripts/generate-tiers-package.ipynb
@@ -16,13 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "import glob\n",
     "import os\n",
     "import sys\n",
+    "import re\n",
     "import numpy as np\n",
     "\n",
     "# define __file__ if it is not defined\n",
@@ -47,28 +48,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['/mnt/data/Clesperanto/repo/pyclesperanto/scripts/../_skbuild/linux-x86_64-3.10/cmake-build/_deps/clic_lib-src/clic/include/tier3/cleCloseIndexGapsInLabelMapKernel.hpp', '/mnt/data/Clesperanto/repo/pyclesperanto/scripts/../_skbuild/linux-x86_64-3.10/cmake-build/_deps/clic_lib-src/clic/include/tier3/cleDifferenceOfGaussianKernel.hpp', '/mnt/data/Clesperanto/repo/pyclesperanto/scripts/../_skbuild/linux-x86_64-3.10/cmake-build/_deps/clic_lib-src/clic/include/tier3/cleHistogramKernel.hpp']\n"
+      "['/mnt/data/Clesperanto/repo/pyclesperanto/scripts/../_skbuild/linux-x86_64-3.10/cmake-build/_deps/clic_lib-src/clic/include/tier2.hpp']\n"
      ]
     }
    ],
    "source": [
     "# get first argument of the script\n",
-    "tier = 3 #sys.argv[1]\n",
+    "tier = 2 #sys.argv[1]\n",
     "\n",
     "# get current directory\n",
     "current_dir = os.path.dirname(os.path.abspath(__file__))\n",
     "# get the relative path to directory and add 'tier' plus the number of the tier\n",
     "tier_dir = os.path.join(current_dir, '..', '_skbuild', 'linux-x86_64-3.10', 'cmake-build', '_deps', 'clic_lib-src', 'clic', 'include', 'tier' + str(tier))\n",
     "# list all files in the tier_dir\n",
-    "files = glob.glob(tier_dir + '/*.hpp')\n",
-    "files.sort()\n",
+    "files = glob.glob(tier_dir + '.hpp')\n",
     "print(files)"
    ]
   },
@@ -82,44 +82,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_function_signature(file, function_name):\n",
+    "def read_file(file):\n",
     "    with open(file, 'r') as f:\n",
-    "        # read the file content\n",
     "        content = f.read()\n",
-    "        # find the position of the function of interest\n",
-    "        start = content.find(function_name + 'Kernel_Call')\n",
-    "        # find the position of the function signature\n",
-    "        start = content.find('(', start)\n",
-    "        # find the position of the end of the function signature\n",
-    "        end = content.find(')', start)\n",
-    "        # extract the function signature\n",
-    "        function_signature = content[start:end+1]\n",
-    "        # remove the prefix 'cle' from the function signature\n",
-    "        function_signature = function_signature.replace('cle', '')\n",
-    "        # remove the suffix 'Kernel_Call' from the function signature\n",
-    "        function_signature = function_signature.replace('Kernel_Call', '')\n",
-    "    return function_signature\n",
+    "    return content\n",
     "\n",
-    "def get_parameter_names(function_signature):\n",
-    "    # split the function signature into a list of parameters\n",
-    "    parameters = function_signature[1:-1].split(',')\n",
-    "    # get the parameter names\n",
-    "    parameter_names = [p.split(' ')[-1] for p in parameters]\n",
-    "    return parameter_names\n",
+    "def parse_file(file_content):\n",
+    "    # Regular expression pattern to extract function names and parameter names\n",
+    "    pattern = r\"(\\w+_func)\\s*\\(([^)]*)\\)\"\n",
     "\n",
-    "def generate_wrapper_function(function_name, parameter_names):\n",
+    "    # Extract function names and parameter names using regular expression\n",
+    "    matches = re.findall(pattern, file_content, re.MULTILINE)\n",
+    "\n",
+    "    # Create a dictionary to store function names and their corresponding parameter names\n",
+    "    function_parameters = {}\n",
+    "\n",
+    "    # Process each match to extract function name and parameter names\n",
+    "    for match in matches:\n",
+    "        function_name, parameters = match\n",
+    "        parameter_names = [param.strip().split()[-1] for param in parameters.split(\",\")]\n",
+    "        function_parameters[function_name] = parameter_names\n",
+    "    \n",
+    "    return function_parameters\n",
+    "\n",
+    "\n",
+    "def generate_function(tier, function_name, parameter_names):\n",
     "    # generate the function name for python and c++\n",
-    "    py_function_name = '_' + function_name + 'Kernel_Call'\n",
-    "    cpp_function_name = function_name + 'Kernel_Call'\n",
+    "    py_function_name = function_name.replace(\"_func\", \"\")\n",
+    "    cpp_function_name = f\"&cle::tier{tier}::{function_name}\"\n",
     "    # generate the function body for the wrapper\n",
-    "    wrapper_function = \"m.def(\\\"\" + py_function_name + \"\\\", &cle::\" + cpp_function_name + \", \\\"Call \" + cpp_function_name + \" from C++.\\\",\\n\"\n",
-    "    wrapper_function += \"pybind11::arg(\\\"\"+ parameter_names[0] +\"\\\")\"\n",
+    "    wrapper_function = f\"m.def(\\\"_{py_function_name}\\\", {cpp_function_name}, \\\"Call {py_function_name} from C++.\\\",\\n\"\n",
+    "    wrapper_function += \"\\t\\tpy::return_value_policy::take_ownership,\\n\"\n",
+    "    wrapper_function += \"\\t\\tpy::arg(\\\"\"+ parameter_names[0] +\"\\\")\"\n",
     "    for parameter_name in parameter_names[1:]:\n",
-    "        wrapper_function += \", pybind11::arg(\\\"\"\n",
+    "        wrapper_function += \", py::arg(\\\"\"\n",
     "        wrapper_function += parameter_name\n",
     "        wrapper_function += \"\\\")\"\n",
     "    wrapper_function += \");\"\n",
@@ -136,44 +136,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\t m.def(\"_CloseIndexGapsInLabelMapKernel_Call\", &cle::CloseIndexGapsInLabelMapKernel_Call, \"Call CloseIndexGapsInLabelMapKernel_Call from C++.\",\n",
-      "pybind11::arg(\"device\"), pybind11::arg(\"src\"), pybind11::arg(\"dst\"), pybind11::arg(\"value\"));\n",
-      "\t m.def(\"_DifferenceOfGaussianKernel_Call\", &cle::DifferenceOfGaussianKernel_Call, \"Call DifferenceOfGaussianKernel_Call from C++.\",\n",
-      "pybind11::arg(\"device\"), pybind11::arg(\"src\"), pybind11::arg(\"dst\"), pybind11::arg(\"sigma1_x\"), pybind11::arg(\"sigma1_y\"), pybind11::arg(\"sigma1_z\"), pybind11::arg(\"sigma2_x\"), pybind11::arg(\"sigma2_y\"), pybind11::arg(\"sigma2_z\"));\n",
-      "\t m.def(\"_HistogramKernel_Call\", &cle::HistogramKernel_Call, \"Call HistogramKernel_Call from C++.\",\n",
-      "pybind11::arg(\"device\"), pybind11::arg(\"src\"), pybind11::arg(\"dst\"), pybind11::arg(\"min_value\"), pybind11::arg(\"max_value\"), pybind11::arg(\"bin\"));\n"
+      "Function: difference_of_gaussian_func\n",
+      "Parameters: ['device', 'src', 'dst', 'sigma1_x', 'sigma1_y', 'sigma1_z', 'sigma2_x', 'sigma2_y', 'sigma2_z']\n",
+      "\n",
+      "difference_of_gaussian_func difference_of_gaussian\n",
+      "\t m.def(\"_difference_of_gaussian\", &cle::tier2::difference_of_gaussian_func, \"Call difference_of_gaussian from C++.\",\n",
+      "\t\tpy::return_value_policy::take_ownership,\n",
+      "\t\tpy::arg(\"device\"), py::arg(\"src\"), py::arg(\"dst\"), py::arg(\"sigma1_x\"), py::arg(\"sigma1_y\"), py::arg(\"sigma1_z\"), py::arg(\"sigma2_x\"), py::arg(\"sigma2_y\"), py::arg(\"sigma2_z\"));\n"
      ]
     }
    ],
    "source": [
     "wrapper_functions = []\n",
-    "# we loop on all the tier files\n",
-    "for file in files:\n",
-    "    # get the function name without the prefix 'cle' and the suffix 'Kernel_Call'\n",
-    "    function_name = os.path.basename(file)[3:-10]\n",
-    "    # print(function_name)\n",
     "\n",
-    "    # read the function signature from the file\n",
-    "    function_signature = read_function_signature(file, function_name)\n",
-    "    # print(function_signature)\n",
+    "file_content = read_file(files[0])\n",
+    "function_parameters = parse_file(file_content)\n",
+    "function_parameters = parse_file(file_content)\n",
     "\n",
-    "    # get the parameter names\n",
-    "    parameter_names = get_parameter_names(function_signature)\n",
-    "    # print(parameter_names)\n",
+    "# Print the function names and their corresponding parameter names\n",
+    "for function_name, parameter_names in function_parameters.items():\n",
+    "    print(f\"Function: {function_name}\")\n",
+    "    print(f\"Parameters: {parameter_names}\")\n",
+    "    print()\n",
     "\n",
-    "    # generate the wrapper function\n",
-    "    wrapper_function = generate_wrapper_function(function_name, parameter_names)\n",
-    "    # print(wrapper_function)\n",
-    "\n",
-    "    # add the wrapper function to the list of wrapper functions\n",
-    "    wrapper_functions.append(wrapper_function)\n",
+    "for function_name, parameter_names in function_parameters.items():\n",
+    "    wrap = generate_function(tier, function_name, parameter_names)\n",
+    "    wrapper_functions.append(wrap)\n",
     "\n",
     "# print each wrapper function on a new line \n",
     "for wrapper_function in wrapper_functions:\n",
@@ -190,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +196,7 @@
     "# get the path to the directory where the cpp file should be stored\n",
     "cpp_dir = os.path.join(current_dir, '..', 'wrapper')\n",
     "# create the cpp file\n",
-    "cpp_file = os.path.join(cpp_dir, 'cleTier' + str(tier) + '.cpp')\n",
+    "cpp_file = os.path.join(cpp_dir, 'tier' + str(tier) + '_wrapper.cpp')\n",
     "\n",
     "# if the file already exists, rename it to cleTierX_old.cpp\n",
     "if os.path.exists(cpp_file):\n",
@@ -210,11 +205,13 @@
     "with open(cpp_file, 'w') as f:\n",
     "    # write the header for pyclesperanto\n",
     "    f.write('#include \"pyclesperanto.hpp\"\\n')\n",
-    "    f.write('#include \"cleKernelList.hpp\"\\n')\n",
+    "    f.write(f'#include \"tier{tier}.hpp\"\\n')\n",
     "    # skip a line\n",
     "    f.write('\\n')\n",
+    "    f.write('namespace py = pybind11;\\n')\n",
+    "    f.write('\\n')\n",
     "    # write the module function\n",
-    "    f.write('auto init_cleTier' + str(tier) + '(pybind11::module_ &m) -> void\\n{\\n')\n",
+    "    f.write('auto wrapper_tier' + str(tier) + '(py::module_ &m) -> void\\n{\\n')\n",
     "    # skip a line\n",
     "    f.write('\\n')\n",
     "    # write the wrapper functions\n",
@@ -242,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
