update autogen script

--- a/scripts/pyclesperanto_autogen_tier_script.ipynb
+++ b/scripts/pyclesperanto_autogen_tier_script.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,20 +48,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['/mnt/data/Clesperanto/repo/pyclesperanto/scripts/../_skbuild/linux-x86_64-3.10/cmake-build/_deps/clic_lib-src/clic/include/tier2.hpp']\n"
+      "['/mnt/data/Clesperanto/repo/pyclesperanto/scripts/../_skbuild/linux-x86_64-3.10/cmake-build/_deps/clic_lib-src/clic/include/tier1.hpp']\n"
      ]
     }
    ],
    "source": [
     "# get first argument of the script\n",
-    "tier = 2\n",
+    "tier = 1\n",
     "\n",
     "# get current directory\n",
     "current_dir = os.path.dirname(os.path.abspath(__file__))\n",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,9 +266,9 @@
     "\n",
     "# if the file already exists, rename it to cleTierX_old.cpp\n",
     "if os.path.exists(cpp_file):\n",
-    "    os.rename(cpp_file, cpp_file.replace('.cpp', '_old.cpp'))\n",
+    "    os.rename(cpp_file, cpp_file.replace('.cpp', '.old_cpp'))\n",
     "if os.path.exists(py_file):\n",
-    "    os.rename(py_file, py_file.replace('.py', '_old.py'))    \n",
+    "    os.rename(py_file, py_file.replace('.py', '.old_py'))    \n",
     "\n",
     "generate_wrapper_code(cpp_file, tier, wrapper_functions)\n",
     "generate_python_code(py_file, tier, python_functions)"
