style add display of method generated

--- a/scripts/pyclesperanto_autogen_tier_script.ipynb
+++ b/scripts/pyclesperanto_autogen_tier_script.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,12 +49,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get first argument of the script\n",
-    "tier = 1\n",
+    "tier = 2\n",
     "file = 'clic/include/tier' + str(tier) + '.hpp'\n",
     "repo = 'https://github.com/clEsperanto/CLIc_prototype.git'\n",
     "branch = 'add-cuda-backend'\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,15 +239,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "difference_of_gaussian_func\n",
+      "maximum_of_all_pixels_func\n"
+     ]
+    }
+   ],
    "source": [
     "wrapper_functions = []\n",
     "\n",
     "# file_content = read_file(files[0])\n",
     "file_content = read_from_repo(file, repo, branch)\n",
     "function_parameters = parse_file(file_content)\n",
+    "\n",
+    "for function_name, parameters in function_parameters.items():\n",
+    "    print(function_name)\n",
     "\n",
     "wrapper_functions = []\n",
     "python_functions = []\n",
@@ -266,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
