--- a/developer_docs/API_demo.ipynb
+++ b/developer_docs/API_demo.ipynb
@@ -91,7 +91,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NVIDIA GeForce RTX 2080 SUPER (CUDA)\n"
+      "(CUDA) NVIDIA GeForce RTX 2080 SUPER\n"
      ]
     }
    ],
@@ -109,7 +109,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NVIDIA GeForce RTX 2080 SUPER (11.7)\n",
+      "(CUDA) NVIDIA GeForce RTX 2080 SUPER (11.7)\n",
       "\tType: GPU\n",
       "\tCompute Units: 48\n",
       "\tGlobal Memory Size: 8366 MB\n",
@@ -129,7 +129,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7ff29c0a15d0>"
+       "<matplotlib.image.AxesImage at 0x7fdbc03b9840>"
       ]
      },
      "execution_count": 7,
@@ -261,10 +261,10 @@
       "logarithm\n",
       "mask\n",
       "mask_label\n",
-      "maximum_all_pixels\n",
       "maximum_box\n",
       "maximum_image_and_scalar\n",
       "maximum_images\n",
+      "maximum_of_all_pixels\n",
       "maximum_sphere\n",
       "maximum_x_projection\n",
       "maximum_y_projection\n",
@@ -321,6 +321,56 @@
     "for k in dir(cle):\n",
     "    print(k)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "02ab542b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220,\n",
+       "       220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220,\n",
+       "       220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220,\n",
+       "       220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220,\n",
+       "       220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220,\n",
+       "       220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220,\n",
+       "       220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220,\n",
+       "       220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220,\n",
+       "       220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220,\n",
+       "       220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220,\n",
+       "       220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220,\n",
+       "       220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220,\n",
+       "       220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220,\n",
+       "       220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220,\n",
+       "       220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220,\n",
+       "       220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220,\n",
+       "       220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220,\n",
+       "       220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220,\n",
+       "       220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220,\n",
+       "       220, 220, 220, 220, 220, 220, 220], dtype=uint8, mtype=buffer)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "blurred.max(axis=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7ef6ab3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cle.imshow(blurred > 150)"
+   ]
   }
  ],
  "metadata": {
@@ -339,7 +389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.9"
   },
   "vscode": {
    "interpreter": {
