update autogen scritp

--- a/scripts/pyclesperanto_autogen_tier_script.ipynb
+++ b/scripts/pyclesperanto_autogen_tier_script.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,12 +49,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get first argument of the script\n",
-    "tier = 2\n",
+    "tier = 5\n",
     "file = 'clic/include/tier' + str(tier) + '.hpp'\n",
     "repo = 'https://github.com/clEsperanto/CLIc_prototype.git'\n",
     "branch = 'add-cuda-backend'\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,8 +153,8 @@
     "def {func_name}(\n",
     "    {param_defines}\n",
     ") -> {return_type}:\n",
-    "    # from ._pyclesperanto import _{func_name} as op\n",
-    "    op = _cle._{func_name}\n",
+    "    from ._pyclesperanto import _{func_name} as op\n",
+    "    # op = _cle._{func_name}\n",
     "    \n",
     "    return op(\n",
     "        {param_bindings}\n",
@@ -167,7 +167,7 @@
     "\n",
     "    for param_name, param_type in zip(parameters_name, parameters_type):\n",
     "        name = param_name.replace('src', 'input_image').replace('dst', 'output_image')\n",
-    "        if param_type in ['float', 'int']:\n",
+    "        if param_type in ['float', 'int', 'bool']:\n",
     "            parameter_binding_list.append(f\"{param_name}={param_type}({name})\")\n",
     "        else:\n",
     "            parameter_binding_list.append(f\"{param_name}={name}\")\n",
@@ -182,6 +182,8 @@
     "            default_value = ''\n",
     "        if param_type in ['float', 'int']:\n",
     "            default_value = ' = 0'\n",
+    "        if param_type in ['bool']:\n",
+    "            default_value = ' = True'\n",
     "        parameter_defines_list.append(f'{name}: {type_declare}{default_value}')\n",
     "\n",
     "    parameter_defines = \",\\n\\t\".join(\n",
@@ -242,52 +244,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "add_images_func {'parameter_names': ['device', 'src0', 'src1', 'dst'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer', 'Array::Pointer'], 'return_type': 'Array::Pointer'}\n",
-      "bottom_hat_box_func {'parameter_names': ['device', 'src', 'dst', 'radius_x', 'radius_y', 'radius_z'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer', 'int', 'int', 'int'], 'return_type': 'Array::Pointer'}\n",
-      "bottom_hat_sphere_func {'parameter_names': ['device', 'src', 'dst', 'radius_x', 'radius_y', 'radius_z'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer', 'float', 'float', 'float'], 'return_type': 'Array::Pointer'}\n",
-      "clip_func {'parameter_names': ['device', 'src', 'dst', 'min_intensity', 'max_intensity'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer', 'float', 'float'], 'return_type': 'Array::Pointer'}\n",
-      "closing_box_func {'parameter_names': ['device', 'src', 'dst', 'radius_x', 'radius_y', 'radius_z'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer', 'int', 'int', 'int'], 'return_type': 'Array::Pointer'}\n",
-      "closing_sphere_func {'parameter_names': ['device', 'src', 'dst', 'radius_x', 'radius_y', 'radius_z'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer', 'float', 'float', 'float'], 'return_type': 'Array::Pointer'}\n",
-      "combine_horizontally_func {'parameter_names': ['device', 'src0', 'src1', 'dst'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer', 'Array::Pointer'], 'return_type': 'Array::Pointer'}\n",
-      "combine_vertically_func {'parameter_names': ['device', 'src0', 'src1', 'dst'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer', 'Array::Pointer'], 'return_type': 'Array::Pointer'}\n",
-      "concatenate_stacks_func {'parameter_names': ['device', 'src0', 'src1', 'dst'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer', 'Array::Pointer'], 'return_type': 'Array::Pointer'}\n",
-      "crop_border_func {'parameter_names': ['device', 'src', 'dst', 'border_size'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer', 'int'], 'return_type': 'Array::Pointer'}\n",
-      "degrees_to_radians_func {'parameter_names': ['device', 'src', 'dst'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer'], 'return_type': 'Array::Pointer'}\n",
-      "difference_of_gaussian_func {'parameter_names': ['device', 'src', 'dst', 'sigma1_x', 'sigma1_y', 'sigma1_z', 'sigma2_x', 'sigma2_y', 'sigma2_z'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer', 'float', 'float', 'float', 'float', 'float', 'float'], 'return_type': 'Array::Pointer'}\n",
-      "gamma_correction_func {'parameter_names': ['device', 'src', 'dst', 'gamma'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer', 'float'], 'return_type': 'Array::Pointer'}\n",
-      "invert_func {'parameter_names': ['device', 'src', 'dst'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer'], 'return_type': 'Array::Pointer'}\n",
-      "label_spots_func {'parameter_names': ['device', 'src', 'dst'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer'], 'return_type': 'Array::Pointer'}\n",
-      "maximum_of_all_pixels_func {'parameter_names': ['device', 'src', 'dst'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer'], 'return_type': 'Array::Pointer'}\n",
-      "minimum_of_all_pixels_func {'parameter_names': ['device', 'src', 'dst'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer'], 'return_type': 'Array::Pointer'}\n",
-      "opening_box_func {'parameter_names': ['device', 'src', 'dst', 'radius_x', 'radius_y', 'radius_z'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer', 'int', 'int', 'int'], 'return_type': 'Array::Pointer'}\n",
-      "opening_sphere_func {'parameter_names': ['device', 'src', 'dst', 'radius_x', 'radius_y', 'radius_z'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer', 'float', 'float', 'float'], 'return_type': 'Array::Pointer'}\n",
-      "radians_to_degrees_func {'parameter_names': ['device', 'src', 'dst'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer'], 'return_type': 'Array::Pointer'}\n",
-      "square_func {'parameter_names': ['device', 'src', 'dst'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer'], 'return_type': 'Array::Pointer'}\n",
-      "standard_deviation_box_func {'parameter_names': ['device', 'src', 'dst', 'radius_x', 'radius_y', 'radius_z'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer', 'int', 'int', 'int'], 'return_type': 'Array::Pointer'}\n",
-      "standard_deviation_sphere_func {'parameter_names': ['device', 'src', 'dst', 'radius_x', 'radius_y', 'radius_z'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer', 'float', 'float', 'float'], 'return_type': 'Array::Pointer'}\n",
-      "sub_stack_func {'parameter_names': ['device', 'src', 'dst', 'start_z', 'end_z'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer', 'int', 'int'], 'return_type': 'Array::Pointer'}\n",
-      "subtract_images_func {'parameter_names': ['device', 'src0', 'src1', 'dst'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer', 'Array::Pointer'], 'return_type': 'Array::Pointer'}\n",
-      "sum_of_all_pixels_func {'parameter_names': ['device', 'src', 'dst'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer'], 'return_type': 'Array::Pointer'}\n",
-      "sum_reduction_x_func {'parameter_names': ['device', None, 'dst', None], 'parameter_types': ['Device::Pointer', None, 'Array::Pointer', None], 'return_type': 'Array::Pointer'}\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'replace'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 11\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[39mprint\u001b[39m(function_name, parameters)\n\u001b[1;32m     10\u001b[0m wrapper_functions\u001b[39m.\u001b[39mappend(generate_wrapper_function(tier, function_name, parameters[\u001b[39m'\u001b[39m\u001b[39mparameter_names\u001b[39m\u001b[39m'\u001b[39m]))\n\u001b[0;32m---> 11\u001b[0m python_functions\u001b[39m.\u001b[39mappend(generate_python_function(tier, function_name, parameters[\u001b[39m'\u001b[39;49m\u001b[39mparameter_names\u001b[39;49m\u001b[39m'\u001b[39;49m], parameters[\u001b[39m'\u001b[39;49m\u001b[39mparameter_types\u001b[39;49m\u001b[39m'\u001b[39;49m], parameters[\u001b[39m'\u001b[39;49m\u001b[39mreturn_type\u001b[39;49m\u001b[39m'\u001b[39;49m]))\n",
-      "Cell \u001b[0;32mIn[7], line 85\u001b[0m, in \u001b[0;36mgenerate_python_function\u001b[0;34m(tier, function_name, parameters_name, parameters_type, return_type)\u001b[0m\n\u001b[1;32m     82\u001b[0m parameter_defines_list \u001b[39m=\u001b[39m []\n\u001b[1;32m     84\u001b[0m \u001b[39mfor\u001b[39;00m param_name, param_type \u001b[39min\u001b[39;00m \u001b[39mzip\u001b[39m(parameters_name, parameters_type):\n\u001b[0;32m---> 85\u001b[0m     name \u001b[39m=\u001b[39m param_name\u001b[39m.\u001b[39;49mreplace(\u001b[39m'\u001b[39m\u001b[39msrc\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39minput_image\u001b[39m\u001b[39m'\u001b[39m)\u001b[39m.\u001b[39mreplace(\u001b[39m'\u001b[39m\u001b[39mdst\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39moutput_image\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     86\u001b[0m     \u001b[39mif\u001b[39;00m param_type \u001b[39min\u001b[39;00m [\u001b[39m'\u001b[39m\u001b[39mfloat\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mint\u001b[39m\u001b[39m'\u001b[39m]:\n\u001b[1;32m     87\u001b[0m         parameter_binding_list\u001b[39m.\u001b[39mappend(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mparam_name\u001b[39m}\u001b[39;00m\u001b[39m=\u001b[39m\u001b[39m{\u001b[39;00mparam_type\u001b[39m}\u001b[39;00m\u001b[39m(\u001b[39m\u001b[39m{\u001b[39;00mname\u001b[39m}\u001b[39;00m\u001b[39m)\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'replace'"
+      "connected_components_labeling_box_func {'parameter_names': ['device', 'src', 'dst'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer'], 'return_type': 'Array::Pointer'}\n"
      ]
     }
    ],
@@ -315,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
