--- a/scripts/pyclesperanto_autogen_tier_script.ipynb
+++ b/scripts/pyclesperanto_autogen_tier_script.ipynb
@@ -21,7 +21,6 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import sys\n",
     "import re\n",
     "import requests\n",
     "import numpy as np\n",
@@ -133,7 +132,7 @@
     "    {param_defines}\n",
     ") -> {return_type}:\n",
     "    from ._pyclesperanto import _{func_name} as op\n",
-    "    \n",
+    "\n",
     "    return op(\n",
     "        {param_bindings}\n",
     "    )\n",
@@ -200,7 +199,7 @@
     "# Do not edit manually. Instead, edit the script and run it again.\n",
     "\n",
     "from ._core import Device\n",
-    "from ._array import Image, Array\n",
+    "from ._array import Image, _Array\n",
     "from ._decorators import plugin_function\n",
     "\n",
     "{python_functions}\n",
