update demos and parser

--- a/scripts/pyclesperanto_autogen_tier_script.ipynb
+++ b/scripts/pyclesperanto_autogen_tier_script.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,12 +40,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "# CLIc repository from where to parse the code\n",
-    "tier = 5\n",
+    "tier = 3\n",
     "file = 'clic/include/tier' + str(tier) + '.hpp'\n",
     "repo = 'https://github.com/clEsperanto/CLIc_prototype.git'\n",
     "branch = 'add-cuda-backend'"
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,21 +80,26 @@
     "    \n",
     "\n",
     "def parse_file(file_content):\n",
-    "    # Regular expression pattern to extract function names, parameter names, and parameter types\n",
-    "    pattern = r\"(\\w+_func)\\s*\\(([^)]*)\\)\\s*->\\s*(\\w+::\\w+|\\w+)\"\n",
+    "    # Regular expression pattern to extract function names, parameter names, types, and default values\n",
+    "    pattern = r\"(\\w+_func)\\s*\\(((?:.|\\n)*?)\\)\\s*->\\s*(\\w+::\\w+|\\w+)\"\n",
+    "    default_value_pattern = r\"=\\s*([^,)]+)\"\n",
     "\n",
-    "    # Extract function names, parameter names, and parameter types using regular expression\n",
-    "    matches = re.findall(pattern, file_content, re.MULTILINE)\n",
+    "    # Extract function names, parameter lists, and return types using regular expression\n",
+    "    matches = re.findall(pattern, file_content)\n",
     "\n",
     "    # Create a dictionary to store function names and their corresponding parameter names and types\n",
     "    function_parameters = {}\n",
     "\n",
     "    # Process each match to extract function name, parameter names, and parameter types\n",
     "    for match in matches:\n",
-    "        function_name, parameters, return_type = match\n",
+    "        function_name, param_list, return_type = match\n",
+    "        # Remove leading/trailing whitespaces and newlines from the parameter list\n",
+    "        param_list = ' '.join([param.strip() for param in param_list.splitlines()])\n",
     "        parameter_names = []\n",
     "        parameter_types = []\n",
-    "        for param in parameters.split(\",\"):\n",
+    "        default_values = re.findall(default_value_pattern, param_list)\n",
+    "        param_list = re.sub(default_value_pattern, '', param_list)\n",
+    "        for param in param_list.split(\",\"):\n",
     "            param = param.strip()\n",
     "            if param.startswith(\"const\"):\n",
     "                param = param[5:].strip()\n",
@@ -108,6 +113,7 @@
     "        function_parameters[function_name] = {\n",
     "            'parameter_names': parameter_names,\n",
     "            'parameter_types': parameter_types,\n",
+    "            'default_values': default_values,\n",
     "            'return_type': return_type\n",
     "        }\n",
     "    \n",
@@ -219,14 +225,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "connected_components_labeling_box_func {'parameter_names': ['device', 'src', 'dst'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer'], 'return_type': 'Array::Pointer'}\n"
+      "flag_existing_labels_func {'parameter_names': ['device', 'src', 'dst'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer'], 'default_values': [], 'return_type': 'Array::Pointer'}\n",
+      "gamma_correction_func {'parameter_names': ['device', 'src', 'dst', 'gamma'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer', 'float'], 'default_values': [], 'return_type': 'Array::Pointer'}\n",
+      "histogram_func {'parameter_names': ['device', 'src', 'dst', 'nbins', 'min', 'max'], 'parameter_types': ['Device::Pointer', 'Array::Pointer', 'Array::Pointer', 'int', 'float', 'float'], 'default_values': ['std::numeric_limits<float>::quiet_NaN(', 'std::numeric_limits<float>::quiet_NaN('], 'return_type': 'Array::Pointer'}\n",
+      "mean_of_all_pixels_func {'parameter_names': ['device', 'src'], 'parameter_types': ['Device::Pointer', 'Array::Pointer'], 'default_values': [], 'return_type': 'float'}\n"
      ]
     }
    ],
@@ -254,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
