--- a/demos/basics/browse_operations.ipynb
+++ b/demos/basics/browse_operations.ipynb
@@ -46,215 +46,165 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Functions available in pyclesperanto package:\n",
-      "Module: pyclesperanto._array\n",
-      "Functions:\n",
-      "  get\n",
-      "  is_image\n",
-      "  set\n",
-      "\n",
-      "Module: pyclesperanto._core\n",
-      "Functions:\n",
-      "  default_initialisation\n",
-      "  get_device\n",
-      "  list_available_backends\n",
-      "  list_available_devices\n",
-      "  select_backend\n",
-      "  select_device\n",
-      "  wait_for_kernel_to_finish\n",
-      "\n",
-      "Module: pyclesperanto._decorators\n",
-      "Functions:\n",
-      "  is_image\n",
-      "  push\n",
-      "  wraps\n",
-      "\n",
-      "Module: pyclesperanto._functionalities\n",
-      "Functions:\n",
-      "  get_device\n",
-      "  imshow\n",
-      "  pull\n",
-      "\n",
-      "Module: pyclesperanto._memory\n",
-      "Functions:\n",
-      "  create\n",
-      "  create_like\n",
-      "  get_device\n",
-      "  pull\n",
-      "  push\n",
-      "\n",
-      "Module: pyclesperanto._operators\n",
-      "Functions:\n",
-      "  astype\n",
-      "  max\n",
-      "  min\n",
-      "  sum\n",
-      "\n",
-      "Module: pyclesperanto._tier1\n",
-      "Functions:\n",
-      "  absolute\n",
-      "  add_image_and_scalar\n",
-      "  add_images_weighted\n",
-      "  binary_and\n",
-      "  binary_edge_detection\n",
-      "  binary_not\n",
-      "  binary_or\n",
-      "  binary_subtract\n",
-      "  binary_xor\n",
-      "  block_enumerate\n",
-      "  convolve\n",
-      "  copy\n",
-      "  copy_horizontal_slice\n",
-      "  copy_slice\n",
-      "  copy_vertical_slice\n",
-      "  crop\n",
-      "  cubic_root\n",
-      "  detect_label_edges\n",
-      "  detect_maxima_box\n",
-      "  detect_minima_box\n",
-      "  dilate_box\n",
-      "  dilate_sphere\n",
-      "  divide_image_and_scalar\n",
-      "  divide_images\n",
-      "  equal\n",
-      "  equal_constant\n",
-      "  erode_box\n",
-      "  erode_sphere\n",
-      "  exponential\n",
-      "  flip\n",
-      "  gaussian_blur\n",
-      "  gradient_x\n",
-      "  gradient_y\n",
-      "  gradient_z\n",
-      "  greater\n",
-      "  greater_constant\n",
-      "  greater_or_equal\n",
-      "  greater_or_equal_constant\n",
-      "  laplace_box\n",
-      "  laplace_diamond\n",
-      "  logarithm\n",
-      "  mask\n",
-      "  mask_label\n",
-      "  maximum_box\n",
-      "  maximum_image_and_scalar\n",
-      "  maximum_images\n",
-      "  maximum_sphere\n",
-      "  maximum_x_projection\n",
-      "  maximum_y_projection\n",
-      "  maximum_z_projection\n",
-      "  mean_box\n",
-      "  mean_sphere\n",
-      "  mean_x_projection\n",
-      "  mean_y_projection\n",
-      "  mean_z_projection\n",
-      "  minimum_box\n",
-      "  minimum_image_and_scalar\n",
-      "  minimum_images\n",
-      "  minimum_sphere\n",
-      "  minimum_x_projection\n",
-      "  minimum_y_projection\n",
-      "  minimum_z_projection\n",
-      "  modulo_images\n",
-      "  multiply_image_and_scalar\n",
-      "  multiply_images\n",
-      "  nonzero_maximum_box\n",
-      "  nonzero_maximum_diamond\n",
-      "  nonzero_minimum_box\n",
-      "  nonzero_minimum_diamond\n",
-      "  not_equal\n",
-      "  not_equal_constant\n",
-      "  onlyzero_overwrite_maximum_box\n",
-      "  onlyzero_overwrite_maximum_diamond\n",
-      "  paste\n",
-      "  power\n",
-      "  power_images\n",
-      "  range\n",
-      "  reciprocal\n",
-      "  replace_intensities\n",
-      "  replace_intensity\n",
-      "  set\n",
-      "  set_column\n",
-      "  set_nonzero_pixels_to_pixelindex\n",
-      "  set_plane\n",
-      "  set_row\n",
-      "  sign\n",
-      "  smaller\n",
-      "  smaller_constant\n",
-      "  smaller_or_equal\n",
-      "  smaller_or_equal_constant\n",
-      "  sobel\n",
-      "  square_root\n",
-      "  subtract_image_from_scalar\n",
-      "  sum_reduction_x\n",
-      "  sum_x_projection\n",
-      "  sum_y_projection\n",
-      "  sum_z_projection\n",
-      "  transpose_xy\n",
-      "  transpose_xz\n",
-      "  transpose_yz\n",
-      "  variance_box\n",
-      "  variance_sphere\n",
-      "  write_values_to_positions\n",
-      "\n",
-      "Module: pyclesperanto._tier2\n",
-      "Functions:\n",
-      "  absolute_difference\n",
-      "  add_images\n",
-      "  bottom_hat_box\n",
-      "  bottom_hat_sphere\n",
-      "  clip\n",
-      "  closing_box\n",
-      "  closing_sphere\n",
-      "  combine_horizontally\n",
-      "  combine_vertically\n",
-      "  concatenate_stacks\n",
-      "  degrees_to_radians\n",
-      "  difference_of_gaussian\n",
-      "  extend_labeling_via_voronoi\n",
-      "  invert\n",
-      "  label_spots\n",
-      "  maximum_of_all_pixels\n",
-      "  minimum_of_all_pixels\n",
-      "  opening_box\n",
-      "  opening_sphere\n",
-      "  radians_to_degrees\n",
-      "  square\n",
-      "  squared_difference\n",
-      "  subtract_images\n",
-      "  sum_of_all_pixels\n",
-      "  top_hat_box\n",
-      "  top_hat_sphere\n",
-      "\n",
-      "Module: pyclesperanto._tier3\n",
-      "Functions:\n",
-      "  flag_existing_labels\n",
-      "  gamma_correction\n",
-      "  mean_of_all_pixels\n",
-      "\n",
-      "Module: pyclesperanto._tier4\n",
-      "Functions:\n",
-      "  mean_squared_error\n",
-      "  relabel_sequential\n",
-      "  threshold_otsu\n",
-      "\n",
-      "Module: pyclesperanto._tier5\n",
-      "Functions:\n",
-      "  combine_labels\n",
-      "  connected_components_labeling_box\n",
-      "\n",
-      "Module: pyclesperanto._tier6\n",
-      "Functions:\n",
-      "  masked_voronoi_labeling\n",
-      "\n",
-      "Module: pyclesperanto._tier7\n",
-      "Functions:\n",
-      "  voronoi_otsu_labeling\n",
-      "\n"
+      "absolute(input_image, output_image, device)\n",
+      "absolute_difference(input_image0, input_image1, output_image, device)\n",
+      "add_image_and_scalar(input_image, output_image, scalar, device)\n",
+      "add_images(input_image0, input_image1, output_image, device)\n",
+      "add_images_weighted(input_image0, input_image1, output_image, factor0, factor1, device)\n",
+      "asarray\n",
+      "binary_and(input_image0, input_image1, output_image, device)\n",
+      "binary_edge_detection(input_image, output_image, device)\n",
+      "binary_not(input_image, output_image, device)\n",
+      "binary_or(input_image0, input_image1, output_image, device)\n",
+      "binary_subtract(input_image0, input_image1, output_image, device)\n",
+      "binary_xor(input_image0, input_image1, output_image, device)\n",
+      "block_enumerate(input_image0, input_image1, output_image, blocksize, device)\n",
+      "bottom_hat_box(input_image, output_image, radius_x, radius_y, radius_z, device)\n",
+      "bottom_hat_sphere(input_image, output_image, radius_x, radius_y, radius_z, device)\n",
+      "clip(input_image, output_image, min_intensity, max_intensity, device)\n",
+      "closing_box(input_image, output_image, radius_x, radius_y, radius_z, device)\n",
+      "closing_sphere(input_image, output_image, radius_x, radius_y, radius_z, device)\n",
+      "combine_horizontally(input_image0, input_image1, output_image, device)\n",
+      "combine_labels(input_image0, input_image1, output_image, device)\n",
+      "combine_vertically(input_image0, input_image1, output_image, device)\n",
+      "concatenate_stacks(input_image0, input_image1, output_image, device)\n",
+      "connected_components_labeling_box(input_image, output_image, device)\n",
+      "convolve(input_image0, input_image1, output_image, device)\n",
+      "copy(input_image, output_image, device)\n",
+      "copy_horizontal_slice(input_image, output_image, slice, device)\n",
+      "copy_slice(input_image, output_image, slice, device)\n",
+      "copy_vertical_slice(input_image, output_image, slice, device)\n",
+      "create\n",
+      "create_like\n",
+      "crop(input_image, output_image, start_x, start_y, start_z, width, height, depth, device)\n",
+      "cubic_root(input_image, output_image, device)\n",
+      "default_initialisation\n",
+      "degrees_to_radians(input_image, output_image, device)\n",
+      "detect_label_edges(input_image, output_image, device)\n",
+      "detect_maxima_box(input_image, output_image, device)\n",
+      "detect_minima_box(input_image, output_image, device)\n",
+      "difference_of_gaussian(input_image, output_image, sigma1_x, sigma1_y, sigma1_z, sigma2_x, sigma2_y, sigma2_z, device)\n",
+      "dilate_box(input_image, output_image, device)\n",
+      "dilate_sphere(input_image, output_image, device)\n",
+      "divide_image_and_scalar(input_image, output_image, scalar, device)\n",
+      "divide_images(input_image0, input_image1, output_image, device)\n",
+      "equal(input_image0, input_image1, output_image, device)\n",
+      "equal_constant(input_image, output_image, scalar, device)\n",
+      "erode_box(input_image, output_image, device)\n",
+      "erode_sphere(input_image, output_image, device)\n",
+      "exponential(input_image, output_image, device)\n",
+      "extend_labeling_via_voronoi(input_image, output_image, device)\n",
+      "flag_existing_labels(input_image, output_image, device)\n",
+      "flip(input_image, output_image, flip_x, flip_y, flip_z, device)\n",
+      "gamma_correction(input_image, output_image, gamma, device)\n",
+      "gaussian_blur(input_image, output_image, sigma_x, sigma_y, sigma_z, device)\n",
+      "get_device\n",
+      "gradient_x(input_image, output_image, device)\n",
+      "gradient_y(input_image, output_image, device)\n",
+      "gradient_z(input_image, output_image, device)\n",
+      "greater(input_image0, input_image1, output_image, device)\n",
+      "greater_constant(input_image, output_image, scalar, device)\n",
+      "greater_or_equal(input_image0, input_image1, output_image, device)\n",
+      "greater_or_equal_constant(input_image, output_image, scalar, device)\n",
+      "histogram(input_image, output_image, nbins, min, max, device)\n",
+      "imshow\n",
+      "invert(input_image, output_image, device)\n",
+      "is_image\n",
+      "label_spots(input_image, output_image, device)\n",
+      "laplace_box(input_image, output_image, device)\n",
+      "laplace_diamond(input_image, output_image, device)\n",
+      "list_available_backends\n",
+      "list_available_devices\n",
+      "list_operations\n",
+      "logarithm(input_image, output_image, device)\n",
+      "mask(input_image, mask, output_image, device)\n",
+      "mask_label(input_image0, input_image1, output_image, label, device)\n",
+      "masked_voronoi_labeling(input_image, mask, output_image, device)\n",
+      "maximum_box(input_image, output_image, radius_x, radius_y, radius_z, device)\n",
+      "maximum_image_and_scalar(input_image, output_image, scalar, device)\n",
+      "maximum_images(input_image0, input_image1, output_image, device)\n",
+      "maximum_of_all_pixels(input_image, device)\n",
+      "maximum_sphere(input_image, output_image, radius_x, radius_y, radius_z, device)\n",
+      "maximum_x_projection(input_image, output_image, device)\n",
+      "maximum_y_projection(input_image, output_image, device)\n",
+      "maximum_z_projection(input_image, output_image, device)\n",
+      "mean_box(input_image, output_image, radius_x, radius_y, radius_z, device)\n",
+      "mean_of_all_pixels(input_image, device)\n",
+      "mean_sphere(input_image, output_image, radius_x, radius_y, radius_z, device)\n",
+      "mean_squared_error(input_image0, input_image1, device)\n",
+      "mean_x_projection(input_image, output_image, device)\n",
+      "mean_y_projection(input_image, output_image, device)\n",
+      "mean_z_projection(input_image, output_image, device)\n",
+      "minimum_box(input_image, output_image, radius_x, radius_y, radius_z, device)\n",
+      "minimum_image_and_scalar(input_image, output_image, scalar, device)\n",
+      "minimum_images(input_image0, input_image1, output_image, device)\n",
+      "minimum_of_all_pixels(input_image, device)\n",
+      "minimum_sphere(input_image, output_image, radius_x, radius_y, radius_z, device)\n",
+      "minimum_x_projection(input_image, output_image, device)\n",
+      "minimum_y_projection(input_image, output_image, device)\n",
+      "minimum_z_projection(input_image, output_image, device)\n",
+      "modulo_images(input_image0, input_image1, output_image, device)\n",
+      "multiply_image_and_scalar(input_image, output_image, scalar, device)\n",
+      "multiply_images(input_image0, input_image1, output_image, device)\n",
+      "nonzero_maximum_box(input_image, output_image0, output_image1, device)\n",
+      "nonzero_maximum_diamond(input_image, output_image0, output_image1, device)\n",
+      "nonzero_minimum_box(input_image, output_image0, output_image1, device)\n",
+      "nonzero_minimum_diamond(input_image, output_image0, output_image1, device)\n",
+      "not_equal(input_image0, input_image1, output_image, device)\n",
+      "not_equal_constant(input_image, output_image, scalar, device)\n",
+      "onlyzero_overwrite_maximum_box(input_image, output_image0, output_image1, device)\n",
+      "onlyzero_overwrite_maximum_diamond(input_image, output_image0, output_image1, device)\n",
+      "opening_box(input_image, output_image, radius_x, radius_y, radius_z, device)\n",
+      "opening_sphere(input_image, output_image, radius_x, radius_y, radius_z, device)\n",
+      "paste(input_image, output_image, index_x, index_y, index_z, device)\n",
+      "power(input_image, output_image, scalar, device)\n",
+      "power_images(input_image0, input_image1, output_image, device)\n",
+      "pull\n",
+      "push\n",
+      "radians_to_degrees(input_image, output_image, device)\n",
+      "range(input_image, output_image, start_x, start_y, start_z, step_x, step_y, step_z, device)\n",
+      "reciprocal(input_image, output_image, device)\n",
+      "relabel_sequential(input_image, output_image, blocksize, device)\n",
+      "replace_intensities(input_image0, input_image1, output_image, device)\n",
+      "replace_intensity(input_image, output_image, scalar0, scalar1, device)\n",
+      "select_backend\n",
+      "select_device\n",
+      "set(input_image, scalar, device)\n",
+      "set_column(input_image, column, value, device)\n",
+      "set_nonzero_pixels_to_pixelindex(input_image, output_image, offset, device)\n",
+      "set_plane(input_image, plane, value, device)\n",
+      "set_row(input_image, row, value, device)\n",
+      "sign(input_image, output_image, device)\n",
+      "smaller(input_image0, input_image1, output_image, device)\n",
+      "smaller_constant(input_image, output_image, scalar, device)\n",
+      "smaller_or_equal(input_image0, input_image1, output_image, device)\n",
+      "smaller_or_equal_constant(input_image, output_image, scalar, device)\n",
+      "sobel(input_image, output_image, device)\n",
+      "square(input_image, output_image, device)\n",
+      "square_root(input_image, output_image, device)\n",
+      "squared_difference(input_image0, input_image1, output_image, device)\n",
+      "subtract_image_from_scalar(input_image, output_image, scalar, device)\n",
+      "subtract_images(input_image0, input_image1, output_image, device)\n",
+      "sum_of_all_pixels(input_image, device)\n",
+      "sum_reduction_x(input_image, output_image, blocksize, device)\n",
+      "sum_x_projection(input_image, output_image, device)\n",
+      "sum_y_projection(input_image, output_image, device)\n",
+      "sum_z_projection(input_image, output_image, device)\n",
+      "threshold_otsu(input_image, output_image, device)\n",
+      "top_hat_box(input_image, output_image, radius_x, radius_y, radius_z, device)\n",
+      "top_hat_sphere(input_image, output_image, radius_x, radius_y, radius_z, device)\n",
+      "transpose_xy(input_image, output_image, device)\n",
+      "transpose_xz(input_image, output_image, device)\n",
+      "transpose_yz(input_image, output_image, device)\n",
+      "variance_box(input_image, output_image, radius_x, radius_y, radius_z, device)\n",
+      "variance_sphere(input_image, output_image, radius_x, radius_y, radius_z, device)\n",
+      "voronoi_otsu_labeling(input_image, output_image, spot_sigma, outline_sigma, device)\n",
+      "write_values_to_positions(input_image, output_image, device)\n"
      ]
     }
    ],
    "source": [
-    "cle.list_functions()"
+    "cle.list_operations()"
    ]
   },
   {
